made some minor adjustments to the data analysis

--- a/Pyber_Solved_Aswellie.ipynb
+++ b/Pyber_Solved_Aswellie.ipynb
@@ -6,14 +6,14 @@
    "source": [
     "## Data Analysis\n",
     "\n",
-    "1. On average Urban areas more drivers and more total rides per city, but, the average fare tends to be lower\n",
+    "1. On average Urban areas have more drivers and more total rides per city, but, the average fare tends to be lower\n",
     "2. Urban areas employ a disproportianate number of drivers (80%) to the total fares that they generate (63%)\n",
-    "3. Conversely, Rural areas employ the lowest total % of drivers (3%) while they contribute 75 of the total fares."
+    "3. Conversely, Rural areas employ the lowest total % of drivers (3%) while they contribute 7% of the total fares."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 377,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "Richardfort            38  Urban  2018-04-17 02:26:37  23.00   720020655850"
       ]
      },
-     "execution_count": 367,
+     "execution_count": 377,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 378,
    "metadata": {
     "scrolled": true
    },
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 380,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 381,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 382,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 385,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 386,
    "metadata": {
     "scrolled": true
    },
