one more update to correct a couple of issues that I noticed

--- a/Pyber_Solved_Aswellie.ipynb
+++ b/Pyber_Solved_Aswellie.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [
     {
@@ -37,14 +37,14 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>city</th>\n",
        "      <th>driver_count</th>\n",
-       "      <th>type</th>\n",
        "      <th>date</th>\n",
        "      <th>fare</th>\n",
        "      <th>ride_id</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>city</th>\n",
+       "      <th>type</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -54,41 +54,41 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Richardfort</th>\n",
+       "      <th>Urban</th>\n",
+       "      <td>Richardfort</td>\n",
        "      <td>38</td>\n",
-       "      <td>Urban</td>\n",
        "      <td>2018-02-24 08:40:38</td>\n",
        "      <td>13.93</td>\n",
        "      <td>5628545007794</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Richardfort</th>\n",
+       "      <th>Urban</th>\n",
+       "      <td>Richardfort</td>\n",
        "      <td>38</td>\n",
-       "      <td>Urban</td>\n",
        "      <td>2018-02-13 12:46:07</td>\n",
        "      <td>14.00</td>\n",
        "      <td>910050116494</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Richardfort</th>\n",
+       "      <th>Urban</th>\n",
+       "      <td>Richardfort</td>\n",
        "      <td>38</td>\n",
-       "      <td>Urban</td>\n",
        "      <td>2018-02-16 13:52:19</td>\n",
        "      <td>17.92</td>\n",
        "      <td>820639054416</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Richardfort</th>\n",
+       "      <th>Urban</th>\n",
+       "      <td>Richardfort</td>\n",
        "      <td>38</td>\n",
-       "      <td>Urban</td>\n",
        "      <td>2018-02-01 20:18:28</td>\n",
        "      <td>10.26</td>\n",
        "      <td>9554935945413</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Richardfort</th>\n",
+       "      <th>Urban</th>\n",
+       "      <td>Richardfort</td>\n",
        "      <td>38</td>\n",
-       "      <td>Urban</td>\n",
        "      <td>2018-04-17 02:26:37</td>\n",
        "      <td>23.00</td>\n",
        "      <td>720020655850</td>\n",
@@ -98,16 +98,16 @@
        "</div>"
       ],
       "text/plain": [
-       "             driver_count   type                 date   fare        ride_id\n",
-       "city                                                                       \n",
-       "Richardfort            38  Urban  2018-02-24 08:40:38  13.93  5628545007794\n",
-       "Richardfort            38  Urban  2018-02-13 12:46:07  14.00   910050116494\n",
-       "Richardfort            38  Urban  2018-02-16 13:52:19  17.92   820639054416\n",
-       "Richardfort            38  Urban  2018-02-01 20:18:28  10.26  9554935945413\n",
-       "Richardfort            38  Urban  2018-04-17 02:26:37  23.00   720020655850"
+       "              city  driver_count                 date   fare        ride_id\n",
+       "type                                                                       \n",
+       "Urban  Richardfort            38  2018-02-24 08:40:38  13.93  5628545007794\n",
+       "Urban  Richardfort            38  2018-02-13 12:46:07  14.00   910050116494\n",
+       "Urban  Richardfort            38  2018-02-16 13:52:19  17.92   820639054416\n",
+       "Urban  Richardfort            38  2018-02-01 20:18:28  10.26  9554935945413\n",
+       "Urban  Richardfort            38  2018-04-17 02:26:37  23.00   720020655850"
       ]
      },
-     "execution_count": 377,
+     "execution_count": 388,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,12 +133,12 @@
     "\n",
     "\n",
     "# Display the data table for preview\n",
-    "city_merged.head()"
+    "ride_merged.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 389,
    "metadata": {
     "scrolled": true
    },
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 393,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 394,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 396,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 397,
    "metadata": {
     "scrolled": true
    },
